--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint . --ext .ts,.tsx --fix",
+    "lint": "next lint",
     "format": "prettier --write .",
     "check-format": "prettier --check .",
     "validate": "npm run check-format && npm run lint",
