--- a/package.json
+++ b/package.json
@@ -10,10 +10,8 @@
     "format": "prettier --write .",
     "check-format": "prettier --check .",
     "validate": "npm run check-format && npm run lint",
-    "seed": "npx tsx scripts/seed.ts",
     "db:push": "drizzle-kit push",
-    "db:studio": "drizzle-kit studio",
-    "db:reset": "npx tsx db/reset-db.ts"
+    "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
     "@neondatabase/serverless": "^1.0.0",
