--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
+    "@auth/drizzle-adapter": "^1.9.1",
     "@neondatabase/serverless": "^1.0.0",
     "@types/bcrypt": "^5.0.2",
     "bcrypt": "^6.0.0",
@@ -21,6 +22,7 @@
     "drizzle-orm": "^0.43.1",
     "jose": "^6.0.11",
     "next": "15.4.0-canary.35",
+    "next-auth": "^5.0.0-beta.28",
     "pg": "^8.13.3",
     "postgres": "^3.4.5",
     "react": "19.1.0",
