--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@neondatabase/serverless": "^1.0.0",
     "@types/bcrypt": "^5.0.2",
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "bcrypt": "^6.0.0",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.43.1",
